// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SyncErrorMessage > should handle retry 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <strong>
      ARK Mainnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      Lisk Devnet
    </strong>
  </span>
   while trying to retrieve your address information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <span>
      <span>
        <a
          class="ring-focus group/inner focus:outline-hidden relative inline-block cursor-pointer space-x-1 font-semibold no-underline transition-colors text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 dark:hover:text-theme-primary-500"
          data-discover="true"
          data-ring-focus-margin="-m-1"
          data-testid="RouterLink"
          href="/"
        >
          <span
            class="break-all border-b border-transparent transition-colors delay-100 duration-200 hover:border-current"
          >
            here
          </span>
        </a>
      </span>
    </span>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render multiple failed networks 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <strong>
      ARK Mainnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      Lisk Devnet
    </strong>
  </span>
   while trying to retrieve your address information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <span>
      <span>
        <a
          class="ring-focus group/inner focus:outline-hidden relative inline-block cursor-pointer space-x-1 font-semibold no-underline transition-colors text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 dark:hover:text-theme-primary-500"
          data-discover="true"
          data-ring-focus-margin="-m-1"
          data-testid="RouterLink"
          href="/"
        >
          <span
            class="break-all border-b border-transparent transition-colors delay-100 duration-200 hover:border-current"
          >
            here
          </span>
        </a>
      </span>
    </span>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render one failed network 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
  </span>
   while trying to retrieve your address information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <span>
      <span>
        <a
          class="ring-focus group/inner focus:outline-hidden relative inline-block cursor-pointer space-x-1 font-semibold no-underline transition-colors text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 dark:hover:text-theme-primary-500"
          data-discover="true"
          data-ring-focus-margin="-m-1"
          data-testid="RouterLink"
          href="/"
        >
          <span
            class="break-all border-b border-transparent transition-colors delay-100 duration-200 hover:border-current"
          >
            here
          </span>
        </a>
      </span>
    </span>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render two failed networks 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      ARK Mainnet
    </strong>
  </span>
   while trying to retrieve your address information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <span>
      <span>
        <a
          class="ring-focus group/inner focus:outline-hidden relative inline-block cursor-pointer space-x-1 font-semibold no-underline transition-colors text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 dark:hover:text-theme-primary-500"
          data-discover="true"
          data-ring-focus-margin="-m-1"
          data-testid="RouterLink"
          href="/"
        >
          <span
            class="break-all border-b border-transparent transition-colors delay-100 duration-200 hover:border-current"
          >
            here
          </span>
        </a>
      </span>
    </span>
  </span>
   to retry.
</div>
`;
